src/main/resources/tests/Semantics/bad/procedureReturn.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure Procedure is
   X : integer := 0;
   procedure AnotherProcedure is
   begin
       return X;
   end AnotherProcedure;
begin
    X;
end Procedure;
